c_standard/c_syntax_simplified.bnf
%token int_const id string
%%

translation_unit	: decl
			| translation_unit decl
			;
decl			: 'int' init_declarator_list ';'
			;
decl_list		: decl
			| decl_list decl
			;
init_declarator_list	: init_declarator
			| init_declarator_list ',' init_declarator
			;
init_declarator		: id
			| id '=' assignment_exp
			;
id_list			: id
			| id_list ',' id
			;
stat			: exp_stat
			| compound_stat
			| selection_stat
			| iteration_stat
			| jump_stat
			;
jump_stat		: 'break' ';'
			;
exp_stat		: exp ';'
			|	';'
			;
compound_stat		: '{' decl_list stat_list '}'
			| '{'		stat_list '}'
			| '{' decl_list		'}'
			| '{'			'}'
			;
stat_list		: stat
			| stat_list stat
			;
selection_stat		: 'if' '(' exp ')' stat
			| 'if' '(' exp ')' stat 'else' stat
			;
iteration_stat		: 'while' '(' exp ')' stat
			| 'do' stat 'while' '(' exp ')' ';'
			| 'for' '(' exp ';' exp ';' exp ')' stat
			| 'for' '(' exp ';' exp ';'	')' stat
			| 'for' '(' exp ';'	';' exp ')' stat
			| 'for' '(' exp ';'	';'	')' stat
			| 'for' '('	';' exp ';' exp ')' stat
			| 'for' '('	';' exp ';'	')' stat
			| 'for' '('	';'	';' exp ')' stat
			| 'for' '('	';'	';'	')' stat
			;
exp			: assignment_exp
			| exp ',' assignment_exp
			;
assignment_exp		: equality_exp
			| unary_exp assignment_operator assignment_exp
			;
assignment_operator	: '=' | '*=' | '/=' | '+=' | '-='
			;
equality_exp		: relational_exp
			| equality_exp '==' relational_exp
			| equality_exp '!=' relational_exp
			;
relational_exp		: additive_exp
			| relational_exp '<' additive_exp
			| relational_exp '>' additive_exp
			| relational_exp '<=' additive_exp
			| relational_exp '>=' additive_exp
			;
additive_exp		: mult_exp
			| additive_exp '+' mult_exp
			| additive_exp '-' mult_exp
			;
mult_exp		: unary_exp
			| mult_exp '*' unary_exp
			| mult_exp '/' unary_exp
			;
unary_exp		: postfix_exp
			| unary_operator unary_exp
			;
unary_operator		: '+' | '-'
			;
postfix_exp		: primary_exp
			| postfix_exp '(' ')'
			| postfix_exp '(' argument_exp_list ')'
			| postfix_exp '++'
			| postfix_exp '--'
			;
primary_exp		: id
			| int_const
			| string
			;
argument_exp_list	: assignment_exp
			| argument_exp_list ',' assignment_exp
			;
